--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
 	<groupId>com.revature</groupId>
 	<artifactId>ERS</artifactId>
 	<version>0.0.1</version>
-
+<dependencies>
+<dependency>
+  <groupId>junit</groupId>
+  <artifactId>junit</artifactId>
+  <version>4.13.2</version>
+</dependency>
+<dependency>
+  <groupId>jdbc</groupId>
+  <artifactId>jdbc-stdext</artifactId>
+  <version>2.0</version>
+</dependency>
+<dependency>
+  <groupId>io.javalin</groupId>
+  <artifactId>javalin-bundle</artifactId>
+  <version>4.5.0.RC0</version>
+</dependency>
+</dependencies>
 
 </project>
