--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.revature</groupId>
@@ -13,16 +11,25 @@
   <artifactId>junit</artifactId>
   <version>4.13.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 <dependency>
-  <groupId>jdbc</groupId>
-  <artifactId>jdbc-stdext</artifactId>
-  <version>2.0</version>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.3.3</version>
 </dependency>
+
 <dependency>
   <groupId>io.javalin</groupId>
   <artifactId>javalin-bundle</artifactId>
   <version>4.5.0.RC0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.9.0</version>
+</dependency>
+
 </dependencies>
 
 </project>
